fix styles bugs on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -67,19 +67,7 @@ a {
 	transition: all 0.1s ease;
 }
 
-@media screen and (max-width: 900px) {
-	.category-btn {
-		margin: 10px;
-	}
-}
-
-@media screen and (max-width: 800px) {
-	.copyright {
-		display: none !important;
-	}
-}
-
-@media screen and (max-width: 600px) {
+@media (max-width: 600px) {
 	.scroll-horizontal {
 		overflow: auto !important;
 	}
@@ -89,5 +77,17 @@ a {
 	}
 	.search-bar {
 		width: 200px;
+	}
+}
+
+@media (max-width: 800px) {
+	.copyright {
+		display: none !important;
+	}
+}
+
+@media (max-width: 900px) {
+	.category-btn {
+		margin: 10px;
 	}
 }
